Dropped watchers due to performance issues, fixed fibonacci check

--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -32,14 +32,13 @@ body {
 .cell {
   flex: 1 0 0;
   border-right: 1px solid $border;
-  //width: 2%;
-  //height: calc((100vh - 51px)  / 50);
-  width: 5%;
-  height: calc((100vh - 51px)  / 20);
+  width: 2%;
+  height: calc((100vh - 51px)  / 50);
   font-size: 14px;
   text-align: center;
   overflow: hidden;
   transition: background ease-in-out .3s;
+  cursor: pointer;
 
   &:first-child {
     border-left: 1px solid $border;
